<resources>
    <string name="app_name">Smart TV Cast</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="app_id">E4D888F2</string>
    <string name="action_settings">Settings</string>
    <string name="show_queue">Show queue</string>
    <string name="introducing_cast">Introducting Cast</string>
    <string name="play_now">Play now</string>
    <string name="add_to_queue">add to queue</string>
    <string name="play_next">Play next</string>
    <string name="action_clear_queue">Clear queue</string>
    <string name="device_is_connected">Device is connected</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="something_wrong_with_connection">Something wrong with connection</string>
    <string name="make_sure_that_you_aren_t_using_vpn_and_the_network_is_good">Make sure that you aren\'t using VPN and the network is good.</string>
    <string name="ok">OK</string>
    <string name="help">Help</string>
    <string name="created">Created :</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_recent">Remove recent</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="cast_to_tv_amp_chromecast_play_video_to_tv"><![CDATA[Cast to TV & Chromecast]]></string>
    <string name="play_video_to_tv">Play video to TV</string>
    <string name="audio">Audio</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="recent_videos">Recent Videos</string>
    <string name="playlist">Playlist</string>
    <string name="screen_mirroring">Screen Mirroring</string>
    <string name="available_device">Available devices</string>
    <string name="no_devices_found">No devices found!</string>
    <string name="cast_tv">Cast TV</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="search_file_here">Search file here…</string>
    <string name="play_on_phone">Play on phone</string>
    <string name="no_result">No result...</string>
    <string name="remove_recent_file">Remove recent file?</string>
    <string name="delete_video">Delete video?</string>
    <string name="delete_audio">Delete audio?</string>
    <string name="delete_image">Delete image?</string>
    <string name="do_you_want_to_delete_video">Do you want to delete video?</string>
    <string name="do_you_want_to_cast_file">Do you want to cast file?</string>
    <string name="do_you_want_to_remove_recent">Do you want to remove recent file?</string>
    <string name="do_you_want_to_delete_audio">Do you want to delete audio?</string>
    <string name="do_you_want_to_delete_image">Do you want to delete image?</string>
    <string name="cancel">Cancel</string>
    <string name="hiding">Please wait...</string>
    <string name="delete_failed">Delete faile !</string>
    <string name="beach_summer">Beach summer</string>
    <string name="stop">Stop</string>
    <string name="queue">Queue</string>
    <string name="mode">Mode</string>
    <string name="volume">Volume</string>
    <string name="repeat_all">Repeat all</string>
    <string name="repeatone">Repeatone</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="error_start_server">Error start server . Try again !</string>
    <string name="downloading">Downloading...</string>
    <string name="cant_delete_file_casting">Can\'t delete the file casting</string>
    <string name="connecting_to">Connecting to</string>
    <string name="disconnect">Disconnect</string>
    <string name="cast_to">Cast to</string>
    <string name="wi_fi_connected">Wi-Fi Connected</string>
    <string name="wi_fi_not_connected">Wi-Fi Not Connected</string>
    <string name="wi_fi_turn_off">Wi-Fi Turn Off</string>
    <string name="wi_fi_turn_on">Wi-Fi Turn On</string>
    <string name="connect">CONNECT</string>
    <string name="make_sure_your_phone_and_playback_device_are_connected_to_the_same_wifi_network">Make sure your phone and playback device are connected to the same wifi network.</string>
    <string name="finding_for_device">Finding for device. . .</string>
    <string name="photo">Photos</string>
    <string name="recent">Recent</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="mute">Mute</string>
    <string name="sound">Sound</string>
    <string name="favorite">Favorite</string>
    <string name="create_a_new_playlist">Create a new playlist</string>
    <string name="create_a_playlist">Create a playlist</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="name_already_exists">Name already exists!</string>
    <string name="add_play_list">Add to playlist</string>
    <string name="file_exits">File exists</string>
    <string name="do_you_want_to_remove_from_list">Do you want to remove from list?</string>
    <string name="remove_file_from_list">Remove file from list?</string>
    <string name="setting">Settings</string>
    <string name="rate">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enjoy_the_app">Enjoy the app?</string>
    <string name="recent_file">Recent file</string>
    <string name="cast_file">Cast file ?</string>
    <string name="thank_for_rate">Thank for rate</string>
    <string name="smart_cast_tv">Smart Cast TV</string>
    <string name="click_here_to_cast_tv">Click here to cast TV</string>
    <string name="got_it">Got it</string>
    <string name="more_app">More Our Apps</string>
</resources>