<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_dialog_10"
    android:padding="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/svn_gilroy_bold"
        android:maxLines="1"
        android:text="@string/something_wrong_with_connection"
        android:textColor="@color/color_181818"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:autoSizeMinTextSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/svn_gilroy_regular"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/make_sure_that_you_aren_t_using_vpn_and_the_network_is_good"
        android:textColor="@color/color_181818"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <TextView
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/help"
            android:textColor="@color/color_002884"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@color/color_002884"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btn_help"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>