<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_dialog_20"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/svn_gilroy_regular"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/cast_file"
            android:textColor="@color/color_002884"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:autoSizeMinTextSize="@dimen/_12sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/svn_gilroy_regular"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/do_you_want_to_cast_file"
            android:textColor="@color/color_002884"
            android:textSize="@dimen/_14sdp"
            app:autoSizeMinTextSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_content">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/bg_btn_cancel_dialog"
                android:fontFamily="@font/svn_gilroy_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/color_8E8E8E"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_btn_ok_dialog"
                android:fontFamily="@font/svn_gilroy_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>