<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_target"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/_88sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.62"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_88sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:rotation="18"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_intro" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/svn_silroy_medium"
            android:maxLines="1"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="@string/smart_cast_tv"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ic"
            app:minTextSize="@dimen/_15sdp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/custom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/click_here_to_cast_tv"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:minTextSize="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_got_it"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/got_it"
            android:text="@string/got_it"
            android:textColor="@color/white"
            app:layout_constraintDimensionRatio="3.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_text"
            app:layout_constraintWidth_percent="0.36" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>