<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_dialog_10"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/svn_silroy_medium"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/connecting_to"
            android:textColor="@color/color_1D1D1D"
            android:textSize="@dimen/_12sdp"
            app:autoSizeMinTextSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/svn_gilroy_bold"
            android:maxLines="2"
            android:paddingStart="@dimen/_3sdp"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/_13sdp"
            app:autoSizeMinTextSize="@dimen/_12sdp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/txt_content"
            app:layout_constraintStart_toEndOf="@+id/txt_content"
            app:layout_constraintTop_toTopOf="@+id/txt_content"
            tools:ignore="RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_content">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/svn_silroy_medium"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/color_8E8E8E"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/svn_silroy_medium"
                android:padding="@dimen/_6sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/disconnect"
                android:textAllCaps="true"
                android:textColor="@color/color_002884"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/btn_no"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>