<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_dialog_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_cast_to_dialog"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_cast_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/svn_gilroy_bold"
                android:paddingBottom="@dimen/_7sdp"
                android:text="@string/cast_to"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_cast_to"
                app:srcCompat="@drawable/ic_wifi" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_state_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/svn_gilroy_regular"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/wi_fi_connected"
                android:textColor="@color/color_4D222222"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@+id/ic_wifi"
                app:layout_constraintStart_toEndOf="@+id/ic_wifi"
                app:layout_constraintTop_toTopOf="@+id/ic_wifi"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_rescan"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/color_222222"
                app:layout_constraintBottom_toTopOf="@+id/txt_connect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_rescan" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/jost_medium"
                android:padding="@dimen/_2sdp"
                android:text="@string/connect"
                android:textColor="@color/color_002884"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_rescan" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_scanning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_title">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/color_4D23DBBD"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/scanning_1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/color_23DBBD"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <View
                android:id="@+id/scanning_2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/color_23DBBD"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcl_router"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/lineBottom"
            app:layout_constraintTop_toBottomOf="@+id/layout_scanning" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_no_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/svn_silroy_medium"
            android:text="@string/no_devices_found"
            android:textColor="@color/color_4A525C"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/svn_silroy_medium"
            android:gravity="center"
            android:lineSpacingExtra="10sp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/make_sure_your_phone_and_playback_device_are_connected_to_the_same_wifi_network"
            android:textColor="@color/color_4A525C"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_no_devices" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_anim_rescan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/casting"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_lotte_reload" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/lineBottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_45sdp"
            android:background="#80C4C4C4"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/btn_candle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/svn_gilroy_bold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_002884"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>